Lesson-92 Fix loi ScrollBar

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -17,9 +17,12 @@
     }
 
     .admin-main {
+        height: calc(100vh - 40px);
         .user-pagination {
             display: flex;
             justify-content: center;
         }
     }
 }
+
+
