--- a/src/components/Admin/Content/Quiz/ManageQuiz.scss
+++ b/src/components/Admin/Content/Quiz/ManageQuiz.scss
@@ -1,5 +1,5 @@
 .quiz-container {
-    // padding: 15px;
+    padding: 15px;
 
     .title {
         font-size: 20px;
